--- a/index.css
+++ b/index.css
@@ -1,22 +1,65 @@
 body{
-    background-image: url("project.jpg");  
-    background-size: 100%
-     
+    background-image: url("tree.jpg");  
+    background-size: 100%;
+   color: darkslategray;
 }
+
+
 .nav{
    height: 45px; width: 100%; background-color: rgb(174, 185, 179); display: flex; 
 }
 .nav p{
 margin-left: 450px;
 margin-bottom: 25px;
+
 }
-img{
-   width: 130px;
-   height: 130px;
-   border-radius: 50%;
-   align-items: center;  
-    
+.nav h2{
+    color: maroon;
+    font-family: cursive;
 }
+
+.profilepic{
+    border-radius: 50%;
+    align-items: center; 
+    width: 130px;
+    height: 130px;
+}
+#lyk{
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.header p{
+    display: inline-block;
+}
+* {box-sizing: border-box}
+
+.container {
+  width: 100%;
+  background-color: #ddd;
+}
+
+.skills {
+  text-align: left;
+  padding-right: 300px;
+  line-height: 30px;
+  /* margin-top: 100px; */
+  
+
+ 
+}
+.skills h3{
+    text-align: center;
+}
+
+.html {width: 90%; background-color: #4CAF50;}
+.css {width: 80%; background-color: #2196F3;}
+.js {width: 40%; background-color: #f44336;}
+.php {width: 50%; background-color: #551469;}
+
+
+
 .header{
     text-decoration-color: darkturquoise;
     margin-top: 50px;
@@ -25,8 +68,12 @@ img{
    
 }
 .links{
+    height: 80;
+    width: 100%;
+    background-color: darkslategray;
     display: flex;
     padding-left: 30px;
+    
     
 }
 .intro{
@@ -41,13 +88,17 @@ img{
     text-align: center;
     display: table-cell;
     height: 100px;
-    width: 100px;
+    width: 120px;
     text-align: center;
     vertical-align: middle;
-    border-radius: 50%;
+    border-radius: 25%;
     background: #000;
     color: #fff;
-    font: 18px "josefin sans", arial; 
+    font: 14px "josefin sans", arial; 
+    
+}
+.links div:hover{
+    transform: scale(1.5);
     
 }
 .careers{
